--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,51 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  layouts:
+    application:
+      base_title: "VP"
+
+    footer:
+      about_us: "About Us"
+      categories: "Categories"
+      hot_deals: "Hot deals"
+      information: "Information"
+      contact_us: "Contact Us"
+      service: "Service"
+      my_account: "My Account"
+      view_cart: "View Cart"
+    header:
+      my_account: "My Account"
+      search: "Search"
+      search_here: "Search here"
+      view_cart: "View Cart"
+      checkout: "Checkout"
+      menu: "Menu"
+      your_cart: "Your Cart"
+    navbar:
+      home: "Home"
+      help: "Help"
+      categories: "Categories"
+      toggle: "Toggle navigation"
+    admin:
+      navbar:
+        profile: "Profile"
+        help: "Help"
+        logout: "Log Out"
+      slidebar:
+        home: "Home"
+        dashboard: "Dashboard"
+        categories: "Categories"
+        general: "General"
+        users: "Users"
+        new_user: "New User"
+        list_user: "List User"
+
+  static_pages:
+    home:
+      home: "Home"
+    help:
+      help: "Help"
+  admin:
+    static_pages:
+      index:
+        index: "Home"
+
