--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,6 +175,14 @@ en:
       import:
         success: "Import product success!"
         not_found: "File no found!"
+    images:
+      comfirm: "Delete image? Are you sure?"
+      create:
+        success: "Upload image success!"
+      destroy:
+        success: "Dalete image success!"
+      update:
+        success: "Image was successfully updated."
   category:
     has_children: "This category has childrent!"
     has_product: "This category has products!"
