--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,6 @@ en:
   layouts:
     application:
       base_title: "VP"
-
     footer:
       about_us: "About Us"
       categories: "Categories"
@@ -30,7 +29,6 @@ en:
       submit: "Login"
       new: "New member ?"
       signup: "Sign up now!"
-
     navbar:
       home: "Home"
       help: "Help"
@@ -49,13 +47,11 @@ en:
         users: "Users"
         new_user: "New User"
         list_user: "List User"
-
   static_pages:
     home:
       home: "Home"
     help:
       help: "Help"
-
   sessions:
     login_form:
       login: "Log in"
@@ -64,7 +60,6 @@ en:
       submit: "Login"
       new: "New member ?"
       signup: "Sign up now!"
-
     create:
       warning: "Invalid email/password combination"
   users:
@@ -79,15 +74,34 @@ en:
       submit: "Create my account"
       member: "Already a member ?"
       login: "Login"
-
     create:
       welcome: "Welcome VP"
-
+    edit:
+      text: "Update profile"
+      name: "Name"
+      email: "Email"
+      phone: "Phone number"
+      address: "Address"
+      pass: "Password"
+      confirm: "Password confirmation"
+      submit: "Update profile"
+    update:
+      updated: "Updated"
+    find_user:
+      notfound: "User not found"
+    show:
+      profile: "Profile: "
+      name: "Name: "
+      email: "Email: "
+      phone: "Phone number: "
+      address: "Address: "
+      change_profile: "Change profile"
+      view_history: "View order history"
+      danger: "Please login"
   shared:
     error_messages:
       err: "error"
       text: "The form contains"
-
   admin:
     static_pages:
       index:
