--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,6 +150,12 @@ en:
       show:
         edit: "Edit"
         back: "Back"
+        exits_image: "Exit Images"
+        stt: "STT"
+        name: "Name"
+        price: "Price"
+        quantity: "Quantity"
+        category: "Category"
       new:
         back: "Back"
         title: "New Product"
@@ -175,6 +181,14 @@ en:
       import:
         success: "Import product success!"
         not_found: "File no found!"
+    images:
+      create:
+        success: "Upload image success!"
+      destroy:
+        success: "Dalete image success!"
+        comfirm: "Delete image? Are you sure?"
+      update:
+        success: "Image was successfully updated."
   category:
     has_children: "This category has childrent!"
     has_product: "This category has products!"
