add chatwork statictis order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -340,3 +340,5 @@ en:
       hi: "Hi admin! This is statics order in current month!"
     order_infomation:
       subject: "Account activation"
+  chatwork:
+    title: "Statistic Orders"
